# autoanalyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_HF.md  pyproject.toml  requirements-serve.txt
.github/workflows/: ci.yml
app/: server.py
app/static/: app.js  index.html  style.css
autoanalyst/: __init__.py  agent.py  cli.py  dataio.py  prompts.py  sandbox.py
samples/: ecommerce_sales.csv
scripts/: deploy_hf.py  make_samples.py
tests/: test_core.py
